2013-05-31  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/if.h: Include cygwin/socket.h rather than sys/socket.h
	to avoid circular dependency resulting in bogus compile time warnings.

2013-05-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_procsys.cc (fhandler_procsys::read): Just call
	fhandler_base::raw_read from here.  Drop comment.
	(fhandler_procsys::write): Drop comment.

2013-05-27  Corinna Vinschen  <corinna@vinschen.de>

	* dll_init.cc (dll_list::topsort): Fix early-return condition to
	accommodate process with all runtime loaded DLLs already dlclosed
	at fork time.
	* gendef (_sigfe_maybe): Fix code handling early return if we don't
	have a tls, broken on 2013-05-21.

2013-05-24  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (DEFS): Unused, remove.
	(COMPILE.cc): Move -mno-use-libstdc-wrappers flag from here...
	($(TEST_DLL_NAME)): ...to here since it's a link time flag.

2013-05-24  Corinna Vinschen  <corinna@vinschen.de>

	* pinfo.cc (pinfo::status_exit): Enhance comment.

2013-05-24  Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (win_env::add_cache): Set the Windows environment variable
	using wide chars to make sure native chars don't get scrambled.
	* environ.h (build_env): Fix formatting in declaration.
	* pinfo.cc (pinfo::status_exit): Handle STATUS_NO_MEMORY.  Explain why.

2013-05-24  Corinna Vinschen  <corinna@vinschen.de>

	* fork.cc (frok::parent): Always set CREATE_UNICODE_ENVIRONMENT flag.
	Explain why.

2013-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* fork.cc (frok::parent): Call CreateProcessW with command line set
	to the parent command line.  Change comment to explain why.

2013-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (child_info_fork::alloc_stack_hard_way): Fix datatype of
	stacksize to SIZE_T.  Cast to SIZE_T in pointer arithmetic.  Slightly
	enhance output in case of a fatal error.
	* fork.cc (frok::parent): Always set ch.stackaddr to DeallocationStack