@@ -1,7 +1,7 @@
 /* sys/socket.h
 
-   Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2005, 2006, 2009, 2010
-   Red Hat, Inc.
+   Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2005, 2006, 2009, 2010,
+   2013 Red Hat, Inc.
 
 This file is part of Cygwin.
 
@@ -20,11 +20,6 @@ details. */
 extern "C"
 {
 #endif
-
-/* SUS symbolic values for the second parm to shutdown(2) */
-#define SHUT_RD   0		/* == Win32 SD_RECEIVE */
-#define SHUT_WR   1		/* == Win32 SD_SEND    */
-#define SHUT_RDWR 2		/* == Win32 SD_BOTH    */
 
 #ifndef __INSIDE_CYGWIN_NET__
   int accept (int, struct sockaddr *__peer, socklen_t *);
